Add render and stub up event listener

--- a/index.html
+++ b/index.html
@@ -11,7 +11,16 @@
 <body>
   <h1>CONNECT FOUR</h1>
   <h2 id="msg"></h2>
-  <section>
+  <section class="markers">
+    <div id="col0"></div>
+    <div id="col1"></div>
+    <div id="col2"></div>
+    <div id="col3"></div>
+    <div id="col4"></div>
+    <div id="col5"></div>
+    <div id="col6"></div>
+  </section>
+  <section class="board">
     <div id="c0r5"></div>
     <div id="c1r5"></div>
     <div id="c2r5"></div>
