correct legal move logic for surrounding friendly stones

--- a/index.html
+++ b/index.html
@@ -290,7 +290,15 @@
     <div id="black-pos" class="player-pos">
       <div id="black-bowl" class="bowl">Black Bowl</div>
       <div id="black-caps" class="caps">Black Captures</div>
-      <div id="kifu">kifu</div>
+      <div id="kifu">
+        <table>
+          <tr>
+            <td>
+              
+            </td>
+          </tr>
+        </table>  
+        </div>
     </div>
   </content>
 </body>
