fix flex display

--- a/index.html
+++ b/index.html
@@ -289,12 +289,12 @@
     </div>
     <div id="black-pos" class="player-pos">
       <div id="black-bowl" class="bowl">Black Bowl</div>
-      <div id="black-caps" class="caps">Black Captures</div>
+      <div id="black-caps" class="caps">Black Caps</div>
       <div id="kifu">
         <table>
           <tr>
             <td>
-              
+
             </td>
           </tr>
         </table>  
