add capture tracker on DOM

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   <content>
     <div id="white-pos" class="player-pos">
       <div id="white-bowl" class="bowl">White Bowl</div>
-      <div id="white-caps" class="caps">White Caps</div>
+      <div id="white-caps-space" class="caps-space"><p id="white-caps">White Caps</p></div>
     </div>
     <div id="board-space">
       <table id="board">
@@ -315,7 +315,7 @@
     </div>
     <div id="black-pos" class="player-pos">
       <div id="black-bowl" class="bowl">Black Bowl</div>
-      <div id="black-caps" class="caps">Black Caps</div>
+      <div id="black-caps-space" class="caps-space"><p id="black-caps">Black Caps</p></div>
       <div id="kifu">
         <table>
           <tr>
