add render marker for player turn, push move to game record

--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
   </div>
   <content>
     <div id="white-pos" class="player-pos">
-      <div id="white-bowl" class="bowl">White Bowl</div>
-      <div id="white-caps-space" class="caps-space"><p id="white-caps">White Caps</p></div>
+      <div id="white-bowl" class="bowl"><p>Pass?</p></div>
+      <div id="white-caps-space" class="caps-space"><p id="white-caps"></p></div>
     </div>
     <div id="board-space">
       <table id="board">
@@ -314,8 +314,8 @@
       </table>
     </div>
     <div id="black-pos" class="player-pos">
-      <div id="black-bowl" class="bowl">Black Bowl</div>
-      <div id="black-caps-space" class="caps-space"><p id="black-caps">Black Caps</p></div>
+      <div id="black-bowl" class="bowl"><p>Pass?</p></div>
+      <div id="black-caps-space" class="caps-space"><p id="black-caps"></p></div>
       <div id="kifu">
         <table>
           <tr>
