--- a/index.html
+++ b/index.html
@@ -14,31 +14,83 @@
 </head>
 <body>
   <div class="modal">
-    <div id="menu">
-      <form>
+    <div>
+      <form id="menu">
         <div id="game-meta">
-          <span>Date:</span><input type="text" name="date">
-          <span>Komi:</span><input type="range" name="komi">
-          <span>Handicap:</span><input type="range" name="handicap">
+          <div class="menu-subblock"><span class="menu-heading">Date:</span><input type="text" name="date"></div>
+          <div class="menu-subblock"><span class="menu-heading">Komi:</span><span id="komi"></span></div>
+          <input type="range" min="-21.5" max="7.5" step="1" value="5.5" name="komi-slider">
+          <div class="menu-subblock"><span class="menu-heading">Handicap:</span><span id="handicap"></span></div>
+          <input type="range" min="0" max="5" step="1" value="0" name="handicap-slider">
         </div>
         <div id="player-meta"> 
           <div data-player-meta="black">
-            <h4>Black</h4>
-            <span>Name:</span><input type="text" name="black-name">
-            <span>Rank:</span><input type="text" name="black-rank">
-            <input type="checkbox" name="black-rank-certain">
+            <h4 class="menu-heading">Black</h4>
+            <span class="menu-heading">Name:</span><input type="text" name="black-name">
+            <span class="menu-heading">Rank:</span><input type="number" id="black-rank" max="38" steps="1" placeholder="15" name="black-rank">
+            <!-- <div id=> -->
+              <!-- <datalist class="rank-tick">
+                <span>30k</span>
+                <span>29k</span>
+                <span>28k</span>
+                <span>27k</span>
+                <span>26k</span>
+                <span>25k</span>
+                <span>24k</span>
+                <span>23k</span>
+                <span>22k</span>
+                <span>21k</span>
+                <span>20k</span>
+                <span>19k</span>
+                <span>18k</span>
+                <span>17k</span>
+                <span>16k</span>
+                <span>15k</span>
+                <span>14k</span>
+                <span>13k</span>
+                <span>12k</span>
+                <span>11k</span>
+                <span>10k</span>
+                <span>9k</span>
+                <span>8k</span>
+                <span>7k</span>
+                <span>6k</span>
+                <span>5k</span>
+                <span>4k</span>
+                <span>3k</span>
+                <span>2k</span>
+                <span>1k</span>
+                <span>1d</span>
+                <span>2d</span>
+                <span>3d</span>
+                <span>4d</span>
+                <span>5d</span>
+                <span>6d</span>
+                <span>7d</span>
+                <span>8d</span>
+                <span>9d</span>
+              </ul>
+            </div> -->
+            <input type="checkbox" name="black-rank-certain"><label for="black-rank-certain">Rank Certainty</label>
           </div>
           <div data-player-meta="white">
-            <h4>White</h4>
-            <span>Name:</span><input type="text" name="white-name">
-            <span>Rank:</span><input type="text" name="white-rank">
-            <input type="checkbox" name="white-rank-certain">
+            <h4 class="menu-heading">White</h4>
+            <span class="menu-heading">Name:</span><input type="text" name="white-name">
+            <span class="menu-heading">Rank:</span><input type="text" name="white-rank">
+            <input type="checkbox" name="white-rank-certain"><label for="white-rank-certain">Rank Certainty</label>
+          </div>
           </div>
           <div id="game-record-space">
-            <p id="instructions">Put instructions for use here.</p>
+            <p id="instructions">Welcome to Browser Go!<br><br>If this is your first time playing Go, please see 
+              <a href="https://www.youtube.com/watch?v=gECcsSeRcNo" target="_blank">this great tutorial video.</a><br><br>
+              To begin a game enter player names and ranks above, then click "Suggest Komi" Browser Go will calculate the appropriate komi based on AGA guidelines.
+              To override Browser Go's suggestion, use the sliders above. Be sure to check the 'rank certainty' box if you're club-rated.<br><br>For now, Browser Go only supports games on a small board.
+              I've got great things planned for the future, though! Lookout for new releases on <a href="https://github.com/sorrelbri/browser-go">the GitHub page!</a></p>
             <p id="game-record"></p>
           </div>
-        </div>
+          <div id="game-update-space">
+              <input type="submit" name="komi-suggest" value="Suggest Komi"><input type="submit" name="game-start" value="Start!">
+          </div>
           
       </form>
     </div>
@@ -46,7 +98,10 @@
   <content>
     <div id="white-pos" class="player-pos">
       <div id="white-bowl" class="bowl"><p>Pass?</p></div>
-      <div id="white-caps-space" class="caps-space"><p id="white-caps"></p></div>
+      <div id="white-player-space" class="name-space">
+        <p id="white-player-name">Test Name rk</p>
+        <div id="white-caps-space" class="caps-space"><p id="white-caps"></p></div>
+      </div>
     </div>
     <div id="board-space">
       <table id="board">
@@ -315,8 +370,10 @@
     </div>
     <div id="black-pos" class="player-pos">
       <div id="black-bowl" class="bowl"><p>Pass?</p></div>
-      <div id="black-caps-space" class="caps-space"><p id="black-caps"></p></div>
-      <div id="kifu">
+      <div id="black-player-space" class="name-space">
+          <p id="black-player-name">Test Name rk</p>
+          <div id="black-caps-space" class="caps-space"><p id="black-caps"></p></div>
+        </div>      <div id="kifu">
         <table>
           <tr>
             <td>
