--- a/index.html
+++ b/index.html
@@ -28,49 +28,6 @@
             <h4 class="menu-heading">Black</h4>
             <span class="menu-heading">Name:</span><input type="text" name="black-name">
             <span class="menu-heading">Rank:</span><input type="number" id="black-rank" max="38" steps="1" placeholder="15" name="black-rank">
-            <!-- <div id=> -->
-              <!-- <datalist class="rank-tick">
-                <span>30k</span>
-                <span>29k</span>
-                <span>28k</span>
-                <span>27k</span>
-                <span>26k</span>
-                <span>25k</span>
-                <span>24k</span>
-                <span>23k</span>
-                <span>22k</span>
-                <span>21k</span>
-                <span>20k</span>
-                <span>19k</span>
-                <span>18k</span>
-                <span>17k</span>
-                <span>16k</span>
-                <span>15k</span>
-                <span>14k</span>
-                <span>13k</span>
-                <span>12k</span>
-                <span>11k</span>
-                <span>10k</span>
-                <span>9k</span>
-                <span>8k</span>
-                <span>7k</span>
-                <span>6k</span>
-                <span>5k</span>
-                <span>4k</span>
-                <span>3k</span>
-                <span>2k</span>
-                <span>1k</span>
-                <span>1d</span>
-                <span>2d</span>
-                <span>3d</span>
-                <span>4d</span>
-                <span>5d</span>
-                <span>6d</span>
-                <span>7d</span>
-                <span>8d</span>
-                <span>9d</span>
-              </ul>
-            </div> -->
             <input type="checkbox" name="black-rank-certain"><label for="black-rank-certain">Rank Certainty</label>
           </div>
           <div data-player-meta="white">
@@ -100,9 +57,9 @@
   </div>
   <content>
     <div id="white-pos" class="player-pos">
-      <div id="white-bowl" class="bowl"><p>Pass?</p></div>
+      <div id="white-bowl" class="bowl"><p>Pass?</p><div id="stone-image"></div></div>
       <div id="white-player-space" class="name-space">
-        <p id="white-player-name">Test Name rk</p>
+        <h4 id="white-player-name">Test Name rk</h4>
         <div id="white-caps-space" class="caps-space"><p id="white-caps"></p></div>
       </div>
     </div>
@@ -374,7 +331,7 @@
     <div id="black-pos" class="player-pos">
       <div id="black-bowl" class="bowl"><p>Pass?</p></div>
       <div id="black-player-space" class="name-space">
-          <p id="black-player-name">Test Name rk</p>
+          <h4 id="black-player-name">Test Name rk</h4>
           <div id="black-caps-space" class="caps-space"><p id="black-caps"></p></div>
         </div>      <div id="kifu">
         <table>
