add user score submission

--- a/index.html
+++ b/index.html
@@ -17,11 +17,18 @@
     <div>
       <form id="menu">
         <div id="game-meta">
+          <h1 class="menu-heading">Browser Go</h1>
           <div class="menu-subblock"><span class="menu-heading">Date:</span><span id="date"></span></div>
           <div class="menu-subblock"><span class="menu-heading">Komi:</span><span id="komi"></span></div>
           <input type="range" min="-21.5" max="7.5" step="1" value="5.5" name="komi-slider">
           <div class="menu-subblock"><span class="menu-heading">Handicap:</span><span id="handicap"></span></div>
           <input type="range" min="0" max="5" step="1" value="0" name="handicap-slider">
+          <div id="board-size-radio" class="menu-subblock">
+            <p class="menu-heading">Board Size</p>
+            <input type="radio" name="board-size" value="9" checked>9 x 9<br>
+            <input type="radio" name="board-size" value="13">13 x 13<br>
+            <input type="radio" name="board-size" value="19">19 x 19
+          </div>
         </div>
         <div id="player-meta"> 
           <div data-player-meta="black">
