--- a/index.html
+++ b/index.html
@@ -33,15 +33,23 @@
         <div id="player-meta"> 
           <div data-player-meta="black">
             <h4 class="menu-heading">Black</h4>
-            <span class="menu-heading">Name:</span><input type="text" name="black-name">
-            <span class="menu-heading">Rank:</span><span id="black-rank">9k</span><input type="button" id="black-rank-up" value="▲"><input type="button" id="black-rank-down" value="▼">
-            <input type="checkbox" name="black-rank-certain"><label for="black-rank-certain">Rank Certainty</label>
+              <span class="menu-heading">Name:</span><input type="text" name="black-name">
+            <div class="menu-line">
+              <span class="menu-heading">Rank:</span><span id="black-rank">9k</span><input type="button" id="black-rank-up" value="▲"><input type="button" id="black-rank-down" value="▼">
+            </div>
+            <div class="menu-line">
+              <input type="checkbox" name="black-rank-certain"><label for="black-rank-certain">Rank Certainty</label>
+            </div>
           </div>
           <div data-player-meta="white">
             <h4 class="menu-heading">White</h4>
-            <span class="menu-heading">Name:</span><input type="text" name="white-name">
-            <span class="menu-heading">Rank:</span><span id="white-rank">9k</span><input type="button" id="white-rank-up" value="▲"><input type="button" id="white-rank-down" value="▼">
-            <input type="checkbox" name="white-rank-certain"><label for="white-rank-certain">Rank Certainty</label>
+              <span class="menu-heading">Name:</span><input type="text" name="white-name">
+            <div class="menu-heading">
+              <span class="menu-heading">Rank:</span><span id="white-rank">9k</span><input type="button" id="white-rank-up" value="▲"><input type="button" id="white-rank-down" value="▼">
+            </div>
+            <div class="menu-heading">
+              <input type="checkbox" name="white-rank-certain"><label for="white-rank-certain">Rank Certainty</label>
+            </div>
           </div>
         </div>
           <div id="game-record-space">
