add player input

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div id="player-meta"> 
           <div data-player-meta="black">
             <h4 class="menu-heading">Black</h4>
-              <span class="menu-heading">Name:</span><input type="text" name="black-name">
+            <span class="menu-heading">Name:</span><input type="text" name="black-name">
             <div class="menu-line">
               <span class="menu-heading">Rank:</span><span id="black-rank">9k</span><input type="button" id="black-rank-up" value="▲"><input type="button" id="black-rank-down" value="▼">
             </div>
@@ -43,11 +43,11 @@
           </div>
           <div data-player-meta="white">
             <h4 class="menu-heading">White</h4>
-              <span class="menu-heading">Name:</span><input type="text" name="white-name">
-            <div class="menu-heading">
+            <span class="menu-heading">Name:</span><input type="text" name="white-name">
+            <div class="line">
               <span class="menu-heading">Rank:</span><span id="white-rank">9k</span><input type="button" id="white-rank-up" value="▲"><input type="button" id="white-rank-down" value="▼">
             </div>
-            <div class="menu-heading">
+            <div class="menu-line">
               <input type="checkbox" name="white-rank-certain"><label for="white-rank-certain">Rank Certainty</label>
             </div>
           </div>
@@ -59,8 +59,8 @@
               To override Browser Go's suggestion, use the sliders above. Be sure to check the 'rank certainty' box if you're club-rated.<br><br>
               When the game begins, click on a legal point on the board to make a move. The active player's bowl will be highlighted. To pass, click on your bowl.
               This will only be possible on your turn. To resign click on your capture tray. After the game ends, groups and territory will display Browser Go's estimate for final state.
-              Simply click on a group to change a group between live and dead, or a point between territory and dame.
-              I've got great things planned for the future, though! Lookout for new releases on <a href="https://github.com/sorrelbri/browser-go">the GitHub page!</a></p>
+              Simply click on a group to change a group between live and dead, or a point between territory and dame.<br><br>
+              For now, your game can't be saved. I've got great things planned for the future, though! Lookout for new releases and suggest new features on <a href="https://github.com/sorrelbri/browser-go">the GitHub page!</a></p>
             <p id="game-record"></p>
           </div>
           <div id="game-update-space">
