fix large board territory render bug

--- a/index.html
+++ b/index.html
@@ -84,7 +84,8 @@
     <div id="board-container">
       <div id="board-space">
         <table id="board">
-            <tbody><tr id="row-1">
+            <tbody>
+              <tr id="row-1">
                 <td id="1-1" class="top lft ">
                   <div class="stone" data-stone="none">
                     <div class="dot" data-dot="none">
