add player name and rank to HUD

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <div id="white-pos" class="player-pos">
       <div id="white-bowl" class="bowl"><p>Pass?</p><div id="white-stone-image" class="stone-image"></div></div>
       <div id="white-player-space" class="name-space">
-        <h4 id="white-player-name">Test Name rk</h4>
+        <h4 id="white-player-name">Browser Go</h4>
         <div id="white-caps-space" class="caps-space"><p>Resign?</p><p id="white-caps"></p></div>
       </div>
       <div id="game-hud">
@@ -2295,7 +2295,7 @@
     <div id="black-pos" class="player-pos">
       <div id="black-bowl" class="bowl"><p>Pass?</p><div id="white-stone-image" class="stone-image"></div></div>
       <div id="black-player-space" class="name-space">
-        <h4 id="black-player-name">Test Name rk</h4>
+        <h4 id="black-player-name">by Sorrel June</h4>
         <div id="black-caps-space" class="caps-space"><p>Resign?</p><p id="black-caps"></p></div>
       </div>      
       <div id="kifu">
