add audio for stone placement, fix menu overflow bug, fix turn marker bug

--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    
-    <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" type="stylesheet"> -->
-    <link rel="stylesheet" href="css/reset.css" type="text/css">
-    <link rel="stylesheet" href="css/main.css" type="text/css" />    
-    <!-- <script defer src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script> -->
-    <script defer src="js/main.js"></script>
-    <title>Browser Go</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  
+  <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" type="stylesheet"> -->
+  <link rel="stylesheet" href="css/reset.css" type="text/css">
+  <link rel="stylesheet" href="css/main.css" type="text/css" />    
+  <!-- <script defer src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script> -->
+  <script defer src="js/main.js"></script>
+  <title>Browser Go</title>
 </head>
 <body>
   <div class="modal">
@@ -25,9 +25,9 @@
           <input type="range" min="0" max="9" step="1" value="0" name="handicap-slider">
           <div id="board-size-radio" class="menu-subblock">
             <p class="menu-heading">Board Size</p>
-            <input type="radio" name="board-size" value="9" checked>9 x 9<br>
+            <input type="radio" name="board-size" value="9">9 x 9<br>
             <input type="radio" name="board-size" value="13">13 x 13<br>
-            <input type="radio" name="board-size" value="19">19 x 19
+            <input type="radio" name="board-size" value="19" checked>19 x 19
           </div>
         </div>
         <div id="player-meta"> 
@@ -2293,7 +2293,7 @@
       </div>
     </div>
     <div id="black-pos" class="player-pos">
-      <div id="black-bowl" class="bowl"><p>Pass?</p><div id="white-stone-image" class="stone-image"></div></div>
+      <div id="black-bowl" class="bowl"><p>Pass?</p><div id="black-stone-image" class="stone-image"></div></div>
       <div id="black-player-space" class="name-space">
         <h4 id="black-player-name">by Sorrel June</h4>
         <div id="black-caps-space" class="caps-space"><p>Resign?</p><p id="black-caps"></p></div>
